--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -18,48 +18,47 @@
  </thead>
   <tbody class="counter pull-left">
     <tr>
-      <td> <%= link_to(@team.player_1, "/player/#{Player.find_by(name: @team.player_1).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_1).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_1, "/player/#{Player.find_by(name: @team.player_1).id}") %> |</td>
+      <td> <%= Player.find_by(name: @team.player_1).home_runs_2017 %> |</td>
       <td> <%= Player.find_by(name: @team.player_1).games_played %></td>
     </tr>
     <tr>
-      <td> <%= link_to(@team.player_2, "/player/#{Player.find_by(name: @team.player_2).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_2).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_2, "/player/#{Player.find_by(name: @team.player_2).id}") %> |</td>
+      <td> <%= Player.find_by(name: @team.player_2).home_runs_2017 %> |</td>
       <td> <%= Player.find_by(name: @team.player_2).games_played %></td>
     </tr>
     <tr>
-      <td> <%= link_to(@team.player_3, "/player/#{Player.find_by(name: @team.player_3).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_3).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_3, "/player/#{Player.find_by(name: @team.player_3).id}") %> |</td>
+      <td> <%= Player.find_by(name: @team.player_3).home_runs_2017 %> |</td>
       <td> <%= Player.find_by(name: @team.player_3).games_played %></td>
     </tr>
     <tr>
-      <td> <%= link_to(@team.player_4, "/player/#{Player.find_by(name: @team.player_4).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_4).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_4, "/player/#{Player.find_by(name: @team.player_4).id}") %> |</td>
+      <td> <%= Player.find_by(name: @team.player_4).home_runs_2017 %> |</td>
       <td> <%= Player.find_by(name: @team.player_4).games_played %></td>
     </tr>
     <tr>
-      <td> <%= link_to(@team.player_5, "/player/#{Player.find_by(name: @team.player_5).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_5).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_5, "/player/#{Player.find_by(name: @team.player_5).id}") %> |</td>
+      <td> <%= Player.find_by(name: @team.player_5).home_runs_2017 %> |</td>
       <td> <%= Player.find_by(name: @team.player_5).games_played %></td>
     </tr>
     <tr>
-      <td> <%= link_to(@team.player_6, "/player/#{Player.find_by(name: @team.player_6).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_6).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_6, "/player/#{Player.find_by(name: @team.player_6).id}") %> |</td>
+      <td> <%= Player.find_by(name: @team.player_6).home_runs_2017 %> |</td>
       <td> <%= Player.find_by(name: @team.player_6).games_played %></td>
     </tr>
     <tr>
-      <td> <%= link_to(@team.player_7, "/player/#{Player.find_by(name: @team.player_7).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_7).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_7, "/player/#{Player.find_by(name: @team.player_7).id}") %> |</td>
+      <td> <%= Player.find_by(name: @team.player_7).home_runs_2017 %> |</td>
       <td> <%= Player.find_by(name: @team.player_7).games_played %></td>
     </tr>
     <tr>
-      <td> <%= link_to(@team.player_8, "/player/#{Player.find_by(name: @team.player_8).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_8).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_8, "/player/#{Player.find_by(name: @team.player_8).id}") %> |</td>
+      <td> <%= Player.find_by(name: @team.player_8).home_runs_2017 %> |</td>
       <td> <%= Player.find_by(name: @team.player_8).games_played %></td>
     </tr>
     <tr>
-      <td> <%= link_to(@team.player_9, "/player/#{Player.find_by(name: @team.player_9).id}") %></td>
-      <td> <%= Player.find_by(name: @team.player_9).home_runs_2017 %></td>
+      <td> <%= link_to(@team.player_9, "/player/#{Player.find_by(name: @team.player_9).id}") %> |</td>
       <td> <%= Player.find_by(name: @team.player_9).games_played %></td>
     </tr>
   
